# FirstQTWindows

./: CMakeLists.txt  main.cpp
